--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
@@ -125,7 +125,7 @@
             <ul class="tab_bar col-md-10" id="tabs"></ul>
             <div class="state_box">
                 <span>状态</span>
-                <span id="status"></span>
+                <span id="status_js"></span>
             </div>
         </div>
         <!-- 内容展示 -->
