订单更新问题

--- a/src/main/webapp/pages/credit/usercenter/all_orders.html
+++ b/src/main/webapp/pages/credit/usercenter/all_orders.html
@@ -701,7 +701,7 @@ tempDict.getSysDictDetailString('upload_busType',model.business_type !);
 							/>
                         </div>
                         <div class="reste form-group row d-flex mb-4 file-upload-box" style="padding-left: 4.5rem">
-                            <div class="file-upload2">
+                            <div class="file-upload">
                                 <label class=" ml-3">上传相关资料：</label>
                                 <div class="uploadFile mr-3 mt-3">
                                     <input type="file" name="file_url" id="upload_file" value=""
