--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_verify.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_verify.html
@@ -246,7 +246,7 @@
 	                                </div>
 	                                <div class="input-group col-md-12 align-items-center" style="margin-top: 1.5rem">
 	                                    <label class="control-label">备注：</label>
-	                                    <textarea name="model.remarks" id="remarks" type="text" class="form-control" style="height: 2.5rem;overflow: hidden;resize: none;"></textarea>
+	                                    <textarea name="model.remarks" id="remarks" type="text" class="form-control" ></textarea>
 	                                </div>
 	                            </div>
                         <label class="mt-3 ml-3">上传附件：</label>
