全部订单，订单撤销，删除 确认原因

--- a/src/main/webapp/pages/credit/usercenter/all_orders.html
+++ b/src/main/webapp/pages/credit/usercenter/all_orders.html
@@ -393,12 +393,12 @@ tempDict.getSysDictDetailString('upload_busType',model.business_type !);
                             <span id="companyName">北京小米科技有限公司</span>
                         </div>
                     </div>
-                    <div class="row mt-2 mb-2">
-                        <div class="col-md-12 d-flex">
-                            <span style="width: 6.1rem">确认原因：</span>
-                            <span>对于只使用浏览、电子邮件等系统自带的网络应用程序，Windows防火墙根本不会产生影响。也就是说，用Internet Explorer、OutlookExpress等系统自带的程序进行网络连接，防火墙是默认不干预的。</span>
-                        </div>
-                    </div>
+                    <!--<div class="row mt-2 mb-2">-->
+                        <!--<div class="col-md-12 d-flex">-->
+                            <!--<span style="width: 6.1rem">确认原因：</span>-->
+                            <!--<span>对于只使用浏览、电子邮件等系统自带的网络应用程序，Windows防火墙根本不会产生影响。也就是说，用Internet Explorer、OutlookExpress等系统自带的程序进行网络连接，防火墙是默认不干预的。</span>-->
+                        <!--</div>-->
+                    <!--</div>-->
                     <input type="hidden" id="orderid">
                 </div>
                 <div class="file-upload">
