填报质检，法人股东详情字段重叠问题

--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
@@ -64,8 +64,8 @@
             table-layout: fixed;
         }
         table.table thead th{
-            white-space: nowrap;
-            min-width: 7rem;
+            /*white-space: nowrap;*/
+            /*min-width: 7rem;*/
             border-top: none;
             border-bottom: none;
         }
