火狐，模态框问题

--- a/src/main/webapp/pages/credit/usercenter/all_orders.html
+++ b/src/main/webapp/pages/credit/usercenter/all_orders.html
@@ -539,7 +539,7 @@ tempDict.getSysDictDetailString('upload_busType',model.business_type !);
                 </button>
             </div>
             <div class="modal-body">
-                <div class="table-content" style="background-color: transparent">
+                <div class="table-content" style="background-color: transparent;overflow: visible">
                     <form id="orderForm" class="form-inline layui-form "
                           enctype="multipart/form-data" action="/credit/front/home/saveOrder"
                           method="post" >
