--- a/src/main/webapp/pages/credit/usercenter/order_manage/create_order.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/create_order.html
@@ -377,7 +377,7 @@ tempDict.getSysDictDetailString('upload_busType',model.business_type !);
 				}
 				else if(report_id==='9'){
 					html+="<option  m-type='' value='215'>英文</option>";
-					/*html+="<option  m-type='' value='216'>中文简体+英文 </option>";*/
+					html+="<option  m-type='' value='216'>中文简体+英文 </option>";
 				}
 	    		else if(report_id==='12'||report_id==='14'||report_id==='11'){
 					html+="<option  m-type='' value='217'>中文繁体+英文 </option>";	
